--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,8 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/inhale.mp3
-    - assets/exhale.mp3
+    - assets/inhale.wav
+    - assets/exhale.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
