--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   just_audio: ^0.9.37
+  event_bus: ^2.0.0
 
 dev_dependencies:
   flutter_test:
